@@ -17,6 +17,7 @@
 #define CONTROL_STRATEGY_HPP
 
 class QMouseEvent;
+class QString;
 
 class ControlStrategy
 {
@@ -32,6 +33,10 @@ public:
     bool secondaryButtonClicked(QMouseEvent & event) const;
 
     void setInvertedMode(bool invertedMode);
+
+    QString mirrorLayoutHorizontallyShortcut() const;
+
+    QString mirrorLayoutVerticallyShortcut() const;
 
 private:
     bool isModifierPressed() const;
