@@ -39,6 +39,7 @@
 #include "node.hpp"
 #include "node_action.hpp"
 #include "node_handle.hpp"
+#include "single_instance_container.hpp"
 
 #include "simple_logger.hpp"
 
@@ -53,7 +54,7 @@ EditorView::EditorView(Mediator & mediator)
   : m_mediator(mediator)
   , m_edgeContextMenu(new Menus::EdgeContextMenu(this, m_mediator))
   , m_mainContextMenu(new Menus::MainContextMenu(this, m_mediator, m_grid))
-  , m_controlStrategy(std::make_unique<ControlStrategy>())
+  , m_controlStrategy(SingleInstanceContainer::instance().controlStrategy())
 {
     setHorizontalScrollBarPolicy(Qt::ScrollBarAlwaysOff);
     setVerticalScrollBarPolicy(Qt::ScrollBarAlwaysOff);
@@ -84,18 +85,18 @@ void EditorView::finishRubberBand()
 
 void EditorView::handleMousePressEventOnBackground(QMouseEvent & event)
 {
-    if (m_controlStrategy->rubberBandInitiated(event)) {
+    if (m_controlStrategy.rubberBandInitiated(event)) {
         initiateRubberBand();
-    } else if (m_controlStrategy->backgroundDragInitiated(event)) {
+    } else if (m_controlStrategy.backgroundDragInitiated(event)) {
         initiateBackgroundDrag();
-    } else if (m_controlStrategy->secondaryButtonClicked(event)) {
+    } else if (m_controlStrategy.secondaryButtonClicked(event)) {
         openMainContextMenu(Menus::MainContextMenu::Mode::Background);
     }
 }
 
 void EditorView::handleMousePressEventOnEdge(QMouseEvent & event, EdgeR edge)
 {
-    if (m_controlStrategy->secondaryButtonClicked(event)) {
+    if (m_controlStrategy.secondaryButtonClicked(event)) {
         handleSecondaryButtonClickOnEdge(edge);
     }
 }
@@ -104,9 +105,9 @@ void EditorView::handleMousePressEventOnNode(QMouseEvent & event, NodeR node)
 {
     if (node.index() != -1) // Prevent right-click on the drag node
     {
-        if (m_controlStrategy->secondaryButtonClicked(event)) {
+        if (m_controlStrategy.secondaryButtonClicked(event)) {
             handleSecondaryButtonClickOnNode(node);
-        } else if (m_controlStrategy->primaryButtonClicked(event)) {
+        } else if (m_controlStrategy.primaryButtonClicked(event)) {
             handlePrimaryButtonClickOnNode(node);
         }
     }
@@ -118,7 +119,7 @@ void EditorView::handleMousePressEventOnNodeHandle(QMouseEvent & event, NodeHand
         return;
     }
 
-    if (m_controlStrategy->primaryButtonClicked(event)) {
+    if (m_controlStrategy.primaryButtonClicked(event)) {
         handlePrimaryButtonClickOnNodeHandle(nodeHandle);
     }
 }
@@ -307,7 +308,7 @@ void EditorView::mousePressEvent(QMouseEvent * event)
             }
             // This hack enables edge context menu even if user clicks on the edge text edit.
         } else if (result.edgeTextEdit) {
-            if (m_controlStrategy->secondaryButtonClicked(*event)) {
+            if (m_controlStrategy.secondaryButtonClicked(*event)) {
                 if (const auto edge = result.edgeTextEdit->edge(); edge) {
                     juzzlin::L().debug() << "Edge text edit pressed";
                     handleMousePressEventOnEdge(*event, *edge);
@@ -316,7 +317,7 @@ void EditorView::mousePressEvent(QMouseEvent * event)
             }
             // This hack enables node context menu even if user clicks on the node text edit.
         } else if (result.nodeTextEdit) {
-            if (m_controlStrategy->secondaryButtonClicked(*event) || (m_controlStrategy->primaryButtonClicked(*event) && isModifierPressed())) {
+            if (m_controlStrategy.secondaryButtonClicked(*event) || (m_controlStrategy.primaryButtonClicked(*event) && isModifierPressed())) {
                 if (const auto node = dynamic_cast<NodeP>(result.nodeTextEdit->parentItem()); node) {
                     juzzlin::L().debug() << "Node text edit pressed";
                     handleMousePressEventOnNode(*event, *node);
@@ -343,7 +344,7 @@ void EditorView::mouseReleaseEvent(QMouseEvent * event)
         default:
             break;
         }
-    } else if (m_controlStrategy->primaryButtonClicked(*event)) {
+    } else if (m_controlStrategy.primaryButtonClicked(*event)) {
         switch (m_mediator.mouseAction().action()) {
         case MouseAction::Action::None:
             // This can happen if the user deletes the drag node while connecting nodes or creating a new node.
